Update API